src/test/deca/context/valid/created/decl_class/super_method.deca
// Description :
//    utilisation d'une methode défini dans une super classe
//
// Resultats :
//		Ok

class C{
int met(){}
}

class B extends C{
}
class A extends B{
}
{
A a = new A();
a.met();
}