src/test/deca/context/invalid/created/appel_meth/appel_sur_void.deca
// Description :
//    appel à une methode sur un void
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 15 :(3.71) Le membre gauche n’est pas de type ‘classe’


class A {
void met(){
}
}
{
A a = new A();
(a.met()).x();
}